# bgfx.meson

./: meson.build
meson/bgfx/: meson.build
meson/bimg/: meson.build
meson/bx/: meson.build
